# faers-scripts

./: .gitignore  .sqlfluff  11.CreateDatasetTables.sql  2dynamic-pgtest.sql  5.CreateFearsDatabaseB_LoadRxNorm_CreateMapperDRUG.sql  7.Cleaning_Mapping.sql  PGSQL_README.md  README.md  _a.demo17q1  config.json  drug.txt  dynamic-pgtest.sql  exec.py  faers_pipeline_start.py  line_numbers_schema.md  main.py  pgtest.sql  pyproject.toml  requirements.txt  s10.py  s10.sql  s11.py  s11.sql  s2-5.py  s2-5.sql  s2.py  s2.sql  s2_5.py  s2_5.sql  s3-4.py  s3_4.py  s4.sql  s4test.sql  s5.py  s5.sql  s6.py  s6.sql  s7.py  s7.sql  s8.py  (+8 more)
config/: README.md  config.json  config_s8.json  directories.json  files.txt  general_options.json  remapping.json  schema_config.json
data/: INDI_medra_mappings.csv  REAC_medra_mappings.csv  reporter_countries.csv
faers_data/: REAC_medra_mappings.csv  reporter_countries.csv
sql/: s10.sql  s3.sql  s4.sql  s5.sql  s6.sql  s7.sql  s9.sql  setup_faers.sql
src/: 9.Mapping_Cleaning.sql  README.md  __init__.py  __main__.py  check_directories.py  check_jsons.py  constants.py  download_current_files_from_faers.py  download_files_from_faers.py  error.py  exec.py  option.py  prompt.py  s10.py  s10.sql  s11.py  s2.py  s2_5.py  s2_create_faers_a.py  s3.py  s3_4.py  s4.py  s5.py  s5.sql  s6.py  s7.py  s7.sql  s8.py  s9.py  setup_faers.py
src/faers_pipeline/: constants.py  s10.py  s11.py  (+5 more)
src/faers_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: faers_scripts_test.bats  test_check_directories.py  test_s2_create_faers_a.py
(+36 files in other folders)
