[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faers_pipeline"
version = "0.1.0"
dependencies = [
  "psycopg>=3.1",
  "pytest",
  "chardet",
  "google-cloud-storage"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
